{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 187,
  "lineage": "3c73a9c8-7028-4141-5173-1550468f6031",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-0fc2993ec2f849f5b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc2993ec2f849f5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00db67c97a6339aab",
            "private_dns": "ip-10-10-0-141.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.141",
            "public_ip": "3.110.181.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096c4d33f2c7f141d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8b7169b7e81a39e",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b67b31b06c2d8d8e"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai_keys",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-069cc89c2f8c65168",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069cc89c2f8c65168",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea1a48f66bcd0c1c",
            "private_dns": "ip-10-10-1-188.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.188",
            "public_ip": "3.109.108.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05aecbc0162e1fbf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035dbee8ab06db4ce",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b67b31b06c2d8d8e"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai_keys",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009715c29e3b187cb",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-0a5b2269810c7f480",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5b2269810c7f480",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02240c94f6321662a",
            "private_dns": "ip-10-10-1-137.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.137",
            "public_ip": "15.207.19.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3c4c2d7ef58f587",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035dbee8ab06db4ce",
            "tags": {
              "Name": "Webserver-3"
            },
            "tags_all": {
              "Name": "Webserver-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b67b31b06c2d8d8e"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai_keys",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:internet-gateway/igw-007aceda5c5f7cac6",
            "id": "igw-007aceda5c5f7cac6",
            "owner_id": "061685900439",
            "tags": {
              "Name": "Mumbai-vpc-IG"
            },
            "tags_all": {
              "Name": "Mumbai-vpc-IG"
            },
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-website-LB-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/card-website-LB-terraform/ce42cc3d480bab53",
            "arn_suffix": "app/card-website-LB-terraform/ce42cc3d480bab53",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-website-LB-terraform-542367218.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/card-website-LB-terraform/ce42cc3d480bab53",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-website-LB-terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b67b31b06c2d8d8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035dbee8ab06db4ce"
              },
              {
                "subnet_id": "subnet-0b8b7169b7e81a39e"
              }
            ],
            "subnets": [
              "subnet-035dbee8ab06db4ce",
              "subnet-0b8b7169b7e81a39e"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0bd709e9690f81fed",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1a",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-website-LB-terraform-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/card-website-LB-terraform-2/eaa2773ef7acd95d",
            "arn_suffix": "app/card-website-LB-terraform-2/eaa2773ef7acd95d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-website-LB-terraform-2-573404027.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/card-website-LB-terraform-2/eaa2773ef7acd95d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-website-LB-terraform-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b67b31b06c2d8d8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035dbee8ab06db4ce"
              },
              {
                "subnet_id": "subnet-0b8b7169b7e81a39e"
              }
            ],
            "subnets": [
              "subnet-035dbee8ab06db4ce",
              "subnet-0b8b7169b7e81a39e"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0bd709e9690f81fed",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1a",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "card-website-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/card-website-LB-terraform/ce42cc3d480bab53/b85b274bc904bc02",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/card-website-LB-terraform/ce42cc3d480bab53/b85b274bc904bc02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/card-website-LB-terraform/ce42cc3d480bab53",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-website-LB-terraform",
            "aws_lb_target_group.card-website-TG-terraform",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1a",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "card-website-listener-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/card-website-LB-terraform-2/eaa2773ef7acd95d/7d474d9c0bcedf1a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform-2/ffa2299bb3510e6d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/card-website-LB-terraform-2/eaa2773ef7acd95d/7d474d9c0bcedf1a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/card-website-LB-terraform-2/eaa2773ef7acd95d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-website-LB-terraform-2",
            "aws_lb_target_group.card-website-TG-terraform-2",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1a",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-website-TG-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df",
            "arn_suffix": "targetgroup/card-website-TG-terraform/4436a4d53fad18df",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-website-TG-terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-website-TG-terraform-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform-2/ffa2299bb3510e6d",
            "arn_suffix": "targetgroup/card-website-TG-terraform-2/ffa2299bb3510e6d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform-2/ffa2299bb3510e6d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-website-TG-terraform-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df-20230922014028865700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df",
            "target_id": "i-0fc2993ec2f849f5b"
          },
          "dependencies": [
            "aws_instance.web-1",
            "aws_key_pair.mumbai_keys",
            "aws_lb_target_group.card-website-TG-terraform",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df-20230922014028895500000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df",
            "target_id": "i-069cc89c2f8c65168"
          },
          "dependencies": [
            "aws_instance.web-2",
            "aws_key_pair.mumbai_keys",
            "aws_lb_target_group.card-website-TG-terraform",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df-20230922014028787800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/card-website-TG-terraform/4436a4d53fad18df",
            "target_id": "i-0a5b2269810c7f480"
          },
          "dependencies": [
            "aws_instance.web-3",
            "aws_key_pair.mumbai_keys",
            "aws_lb_target_group.card-website-TG-terraform",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai_RT_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:route-table/rtb-0e50c19280a139c91",
            "id": "rtb-0e50c19280a139c91",
            "owner_id": "061685900439",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mumbai-RT-Private"
            },
            "tags_all": {
              "Name": "mumbai-RT-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai_RT_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:route-table/rtb-0f239728f9e8c195b",
            "id": "rtb-0f239728f9e8c195b",
            "owner_id": "061685900439",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007aceda5c5f7cac6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-RT-Public"
            },
            "tags_all": {
              "Name": "mumbai-RT-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d6ae81f18448b1d",
            "route_table_id": "rtb-0f239728f9e8c195b",
            "subnet_id": "subnet-0b8b7169b7e81a39e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mumbai_RT_Public",
            "aws_subnet.mumbai_subnet_1a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8c6a49c8cc20689",
            "route_table_id": "rtb-0f239728f9e8c195b",
            "subnet_id": "subnet-035dbee8ab06db4ce"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mumbai_RT_Public",
            "aws_subnet.mumbai_subnet_1b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae8b7be7e98f1c79",
            "route_table_id": "rtb-0e50c19280a139c91",
            "subnet_id": "subnet-04bd268ec02aaddef"
          },
          "dependencies": [
            "aws_route_table.mumbai_RT_Private",
            "aws_subnet.mumbai_subnet_1c",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:security-group/sg-0b67b31b06c2d8d8e",
            "description": "Allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b67b31b06c2d8d8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "061685900439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-0b8b7169b7e81a39e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b7169b7e81a39e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1a"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1a"
            },
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-035dbee8ab06db4ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035dbee8ab06db4ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1b"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1b"
            },
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-04bd268ec02aaddef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd268ec02aaddef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai_subnet_1c"
            },
            "tags_all": {
              "Name": "mumbai_subnet_1c"
            },
            "vpc_id": "vpc-0bd709e9690f81fed"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mumbai_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:vpc/vpc-0bd709e9690f81fed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02dbcc07e84fce8d7",
            "default_route_table_id": "rtb-09128e8a1fc1324ad",
            "default_security_group_id": "sg-09c0c86df9af35a1b",
            "dhcp_options_id": "dopt-04fb04627013b5d59",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd709e9690f81fed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09128e8a1fc1324ad",
            "owner_id": "061685900439",
            "tags": {
              "Name": "Mumbai_VPC"
            },
            "tags_all": {
              "Name": "Mumbai_VPC"
            }
          }
        }
      ]
    }
  ]
}